--- a/Armada.WebApp/Views/Admin/Index.cshtml
+++ b/Armada.WebApp/Views/Admin/Index.cshtml
@@ -2,9 +2,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-<div class="nav">
+<div class="nav ">
     <ul class="nav nav-tabs m-auto p-3">
         <li class="nav-item">
             <a class="nav-link active" data-bs-toggle="tab" href="#home">Home</a>
@@ -30,6 +29,27 @@
     </ul>
 </div>
 
+@*Modal*@
+<div class="modal" id="deleteModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Element</h5>
+                <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete</p>
+            </div>
+            <div class="modal-footer" id="modalfooterbtn">
+               
+            </div>
+        </div>
+    </div>
+</div>
+
+
     <div class="container">
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active show" id="home">
@@ -46,6 +66,8 @@
             </div>
         </div>
     </div>
+<div id="alertEmperor" class="container"></div>
+
 
 
 @section scripts
@@ -91,8 +113,7 @@
                                                      </td>
 
                                                      <td>
-                                                         <button id="delete" onclick="deleteCrew(${crew.CrewId
-                            })" class="btn btn-danger btn-sm">Delete</button>
+                                                         <button id="delete" onclick="deleteCrew(${crew.CrewId})" class="btn btn-danger btn-sm">Delete</button>
                                                      </td>
                                                  </tr>
                                                 `);
@@ -143,10 +164,14 @@
                                                          ${mission.EndDate}
                                                      </td>
                                                      <td>
-                                                         ${mission.Planets}
+                                                         <ul class = "list-unstyled">
+                                                            ${ShowMissionPlanets(mission)}
+                                                        </ul>
                                                      </td>
                                                      <td>
-                                                         ${mission.Admirals}
+                                                         <ul class = "list-unstyled">
+                                                            ${ShowMissionAdmirals(mission)}
+                                                        </ul>
                                                      </td>
                                                      <td>
                                                          <button id="delete" onclick="deleteMission(${mission.missionId
@@ -160,6 +185,28 @@
             });
 
         });
+
+        function ShowMissionAdmirals(mission) {
+            let template = "";
+            for (var admiral of mission.Admirals) {
+                template += `<li>
+                            ${admiral.Name}
+                            </li>`;
+            }
+
+            return template;
+        }
+
+        function ShowMissionPlanets(mission) {
+            let template = "";
+            for (var planet of mission.Planets) {
+                template += `<li>
+                            ${planet.Name}
+                            </li>`;
+            }
+
+            return template;
+        }
 
         //Admiral
         function CreateAdmiralTable() {
@@ -406,23 +453,22 @@
                     CreateEmperorTable();
                     response.forEach(function(emperor) {
                         $("#emperorsBody").append(`
-                                                     <tr>
-                                                     <td>
-                                                         ${emperor.Photo}
-                                                     </td>
-                                                     <td>
-                                                         ${emperor.Name}
-                                                     </td>
-                                                     <td>
-                                                         ${emperor.Age}
-                                                     </td>
-                                                     <td>
-                                                         ${emperor.Empire}
-                                                     </td>
-                                                     <td>
-                                                         <button id="delete" onclick="deleteMission(${emperor.EmperorId
-                            })" class="btn btn-danger btn-sm">Delete</button>
-                                                     </td>
+                                                    <tr id=emp${emperor.EmperorId}>
+                                                        <td>
+                                                            ${emperor.Photo}
+                                                        </td>
+                                                        <td>
+                                                            ${emperor.Name}
+                                                        </td>
+                                                        <td>
+                                                            ${emperor.Age}
+                                                        </td>
+                                                        <td>
+                                                            ${emperor.Empire}
+                                                        </td>
+                                                        <td>
+                                                            <button id="delete" onclick="showEmperorDeleteModal(${emperor.EmperorId})" class="btn btn-danger btn-sm">Delete</button>
+                                                        </td>
                                                  </tr>
                                                 `);
                     });
@@ -431,6 +477,53 @@
             });
 
         });
+
+
+        function showEmperorDeleteModal(id) {
+            $(document).ready(function () {
+                $("#deleteModal").modal();
+            });
+
+            $("#modalfooterbtn").html(
+                            `
+                            <button type="button" onclick="deleteEmperor(${id})" id="ajaxDelete" class="btn btn-danger deletebtn">Delete</button>
+                            <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Cancel</button>
+                            `
+            );
+
+            $(".close").click(function () {
+                $("#deleteModal").modal("hide");
+            });
+        }
+
+
+
+
+        function deleteEmperor(id) {
+            $.ajax({
+                type: "DELETE",
+                url: `/api/Emperor/?id=${id}`,
+                data: "",
+                dataType: "json",
+                success: function (response) {
+                    setTimeout(() => $("#alertEmperor").html(`
+                                            <div class="alert alert-dismissible alert-warning">
+                                              <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                                              <h4 class="alert-heading">Successfully deleted</h4>
+                                              <p class="mb-0">${response.Name}</p>
+                                            </div>
+                                        `).fadeOut(4000), 500);
+
+                    
+                }
+            });
+            $("#deleteModal").modal("hide");
+            $(`#emp${id}`).remove();
+        }
+        
+        
+
+
 
 
     </script>
