--- a/Armada.WebApp/Views/Account/Login.cshtml
+++ b/Armada.WebApp/Views/Account/Login.cshtml
@@ -30,19 +30,19 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
+                        <div class="form-check m-2">
+                            @Html.CheckBoxFor(m => m.RememberMe , new{@class = "form-check-input"})
                             @Html.LabelFor(m => m.RememberMe)
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-primary mb-2" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Register as a new user", "Register" ,null , new{@class = "btn btn-outline-primary"})
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
