EditEmperor Partialy ready

--- a/Armada.WebApp/Views/Admin/Index.cshtml
+++ b/Armada.WebApp/Views/Admin/Index.cshtml
@@ -51,7 +51,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title text-center">Armada Admin Management</h4>
+                <h4 class="modal-title">Armada Admin Management</h4>
                 <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"></span>
                 </button>
@@ -65,8 +65,9 @@
     </div>
 </div>
 
-@*AlertMessage*@
+@*AlertMessages*@
 <div id="deleteAlert" class="container"></div>
+<div id="successAlert" class="container"></div>
 
 @section scripts
 {
@@ -114,9 +115,12 @@
                                                </td>
 
                                                <td>
-                                                   <button id="info" onclick="ShowCrewInfoModal(${crew.CrewId})" class="btn btn-info btn-sm">Info</button>
-                                                   <button id="edit" onclick="(${crew.CrewId})" class="btn btn-primary btn-sm">Edit</button>
-                                                   <button id="delete" onclick="ShowCrewDeleteModal(${crew.CrewId})" class="btn btn-danger btn-sm">Delete</button>
+                                                   <button id="info" onclick="ShowCrewInfoModal(${crew.CrewId
+                            })" class="btn btn-info btn-sm">Info</button>
+                                                   <button id="edit" onclick="(${crew.CrewId
+                            })" class="btn btn-primary btn-sm">Edit</button>
+                                                   <button id="delete" onclick="ShowCrewDeleteModal(${crew.CrewId
+                            })" class="btn btn-danger btn-sm">Delete</button>
                                                </td>
                                            </tr>
                                                             `);
@@ -138,9 +142,12 @@
                     });
 
                     $("#modalBody").html(`<ul>
-                                                     <li><p class ="text-info">  <strong>Crew Number:</strong> ${response.Number}</p> </li>
-                                                     <li><p class ="text-info">  <strong>Specialty:</strong> ${response.Specialty}</p> </li>
-                                                     <li><p class ="text-info">   <strong>Admiral in charge:</strong> ${response.Admiral}</p></li>
+                                                     <li><p class ="text-info">  <strong>Crew Number:</strong> ${
+                        response.Number}</p> </li>
+                                                     <li><p class ="text-info">  <strong>Specialty:</strong> ${response
+                        .Specialty}</p> </li>
+                                                     <li><p class ="text-info">   <strong>Admiral in charge:</strong> ${
+                        response.Admiral}</p></li>
                                                     <ul>`);
 
                     $("#modalFooter")
@@ -245,9 +252,11 @@
                                                                     </ul>
                                                                  </td>
                                                                  <td>
-                                                                     <button id="info" onclick="ShowMissionInfoModal(${mission.MissionId})" class="btn btn-info btn-sm">Info</button>
+                                                                     <button id="info" onclick="ShowMissionInfoModal(${
+                            mission.MissionId})" class="btn btn-info btn-sm">Info</button>
                                                                      <button id="edit" onclick="" class="btn btn-primary btn-sm">Edit</button>
-                                                                     <button id="delete" onclick="ShowMissionDeleteModal(${mission.MissionId})" class="btn btn-danger btn-sm">Delete</button>
+                                                                     <button id="delete" onclick="ShowMissionDeleteModal(${
+                            mission.MissionId})" class="btn btn-danger btn-sm">Delete</button>
                                                                  </td>
                                                              </tr>
                                                             `);
@@ -788,7 +797,9 @@
 
 
         //Emperor
-        function CreateEmperorTable() {
+
+        //Table Creation Section
+        function CreateEmperorTableHead() {
             $("#TabContent").html(`
                                              <h2 class="m-4 text-center">Emperors</h2>
                                             <table class="table table-hover table-bordered">
@@ -808,14 +819,14 @@
                                         `);
         }
 
-        $("#emperorTablebtn").click(function() {
+        function CreateEmperorFullTable() {
             $.ajax({
                 type: "GET",
                 url: "/api/Emperor",
                 data: "",
                 dataType: "json",
                 success: function(response) {
-                    CreateEmperorTable();
+                    CreateEmperorTableHead();
                     response.forEach(function(emperor) {
                         $("#emperorsBody").append(`
                                                                 <tr id=emp${emperor.EmperorId}>
@@ -832,11 +843,9 @@
                                                                         ${emperor.Empire}
                                                                     </td>
                                                                     <td>
-                                                                        <button id="info" onclick="ShowEmperorInfoModal(${
-                            emperor.EmperorId})" class="btn btn-info btn-sm">Info</button>
-                                                                        <button id="edit" onclick="" class="btn btn-primary btn-sm">Edit</button>
-                                                                        <button id="delete" onclick="ShowEmperorDeleteModal(${
-                            emperor.EmperorId})" class="btn btn-danger btn-sm">Delete</button>
+                                                                        <button id="info" onclick="ShowEmperorInfoModal(${emperor.EmperorId})" class="btn btn-info btn-sm">Info</button>
+                                                                        <button id="edit" onclick="ShowEmperorEditModal(${emperor.EmperorId})" class="btn btn-primary btn-sm">Edit</button>
+                                                                        <button id="delete" onclick="ShowEmperorDeleteModal(${emperor.EmperorId})" class="btn btn-danger btn-sm">Delete</button>
                                                                     </td>
                                                              </tr>
                                                             `);
@@ -844,9 +853,11 @@
 
                 }
             });
+        }
 
-        });
+        $("#emperorTablebtn").click(CreateEmperorFullTable);
 
+        //Create Emperor Section
         function ShowEmperorCreateModal() {
             $(document).ready(function() {
                 $("#ArmadaModal").modal();
@@ -867,6 +878,8 @@
             CreateEmperor();
 
             $("#empForm").submit(() => $("#ArmadaModal").modal("hide"));
+
+            $("#empForm").submit(() => CreateEmperorFullTable());
 
         }
 
@@ -914,10 +927,10 @@
                 url: "/api/Empire",
                 data: "",
                 dataType: "json",
-                success: function (response) {
+                success: function(response) {
 
                     var emperorsWithoutEmpire = response.filter(e => e.Emperor == null);
-                    emperorsWithoutEmpire.forEach(function (empire) {
+                    emperorsWithoutEmpire.forEach(function(empire) {
                         $("#EmpireSelect").append(`
                                                        <option id="${empire.EmpireId}">${empire.Name}</option>
                                                `);
@@ -926,7 +939,6 @@
             });
 
         }
-
 
         function CreateEmperor() {
 
@@ -945,21 +957,104 @@
                     url: "/api/Emperor",
                     data: emperor,
                     dataType: "json",
-                    success: function (response) {
-                       //na ftiaxtei to alert edw
-                       //na kanoume append ston pinaka kata to create
+                    success: function(response) {
+                        $("#successAlert").html(`
+                                       <div class="alert alert-dismissible alert-success">
+                                           <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                                           <strong>Well done!</strong> You successfully Created  ${response.Name} !!
+                                       </div>
+                                              `);
+                        setTimeout(() => $("#successAlert").html('').fadeOut(4000), 4000);
                     }
-                });});
-                
-                
-                
+                });
+            });
+        }
 
+        //Edit Emperor Section
 
-         
+       
+
+        function ShowEmperorEditModal(id) {
+            $(document).ready(function() {
+                $("#ArmadaModal").modal();
+            });
+
+            EmperorEmpiresTemplate();
+
+            EmperorEditModalBody(id);
+
+            $("#modalFooter").html('<button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Cancel</button>');
+
+            $(".close").click(function() {
+                $("#ArmadaModal").modal("hide");
+            });
+
+            $("#empEditForm").submit((e) => e.preventDefault());
+
+            //EditEmperor();
+
+            $("#empForm").submit(() => $("#ArmadaModal").modal("hide"));
+
+            $("#empForm").submit(() => CreateEmperorFullTable());
+
+        }
+
+        function EmperorEditModalBody(id) {
+            $.ajax({
+                type: "GET",
+                url: `/api/Emperor/?id=${id}`,
+                data: "",
+                dataType: "json",
+                success: function (response) {
+                    $("#modalBody").html(`
+                                    <div class="col-md-8 mx-auto text-center">
+                                         <form id="empEditForm">
+                                           <fieldset>
+                                               <legend>Edit Emperor</legend>
+
+                                               <div class="form-group">
+                                                   <label class="col-form-label mt-4" for="Name">Name</label>
+                                                   <input type="text" class="form-control" placeholder="Name" id="Name" value=${response.Name} autocomplete="off" required minlength="2" >
+                                               </div>
+
+                                               <div class="form-group">
+                                                   <label class="col-form-label mt-4" for="Age">Age</label>
+                                                   <input type="number" class="form-control" placeholder="Age" id="Age" value=${response.Age} autocomplete="off" required min ="18">
+                                               </div>
+
+                                               <div class="form-group">
+                                                   <label for="SpeciesSelect" class="form-label mt-4">Species</label>
+                                                   <select class="form-select" id="SpeciesSelect">
+                                                    <option id=${response.Species}>${response.Species}</option>
+                                                   </select>
+                                               </div>
+
+                                               <div class="form-group">
+                                                   <label for="EmpireSelect" class="form-label mt-4">Empire</label>
+                                                   <select class="form-select" id="EmpireSelect">
+                                                    <option id=${response.EmpireId}>${response.EmpireName}</option>
+                                                   </select>
+                                               </div>
+                                               <div class="form-group">
+                                                   <label for="About" class="form-label mt-4">About</label>
+                                                   <textarea class="form-control" id="About" rows="3"  required minlength="10">${response.Description}</textarea>
+                                               </div>
+                                               <div class="form-group">
+                                                   <label for="formFile" class="form-label mt-4">Photo</label>
+                                                   <input class="form-control" type="file" id="formFile">
+                                               </div>
+                                                  <input type="submit" class="btn btn-primary mt-3  value="Register"/>
+                                              </fieldset>
+                                         </form>
+                                      </div>
+                                  `);
+                }
+            });
 
 
         }
 
+        //Info Emperor Section
         function ShowEmperorInfoModal(id) {
             $.ajax({
                 type: "GET",
@@ -987,6 +1082,7 @@
             });
         }
 
+        //Delete Emperor Section
         function ShowEmperorDeleteModal(id) {
             $(document).ready(function() {
                 $("#ArmadaModal").modal();
@@ -1024,6 +1120,7 @@
                         500);
                 }
             });
+
             $("#ArmadaModal").modal("hide");
             $(`#emp${id}`).remove();
         }
