Still Edit Emperor

--- a/Armada.WebApp/Views/Admin/Index.cshtml
+++ b/Armada.WebApp/Views/Admin/Index.cshtml
@@ -843,9 +843,12 @@
                                                                         ${emperor.Empire}
                                                                     </td>
                                                                     <td>
-                                                                        <button id="info" onclick="ShowEmperorInfoModal(${emperor.EmperorId})" class="btn btn-info btn-sm">Info</button>
-                                                                        <button id="edit" onclick="ShowEmperorEditModal(${emperor.EmperorId})" class="btn btn-primary btn-sm">Edit</button>
-                                                                        <button id="delete" onclick="ShowEmperorDeleteModal(${emperor.EmperorId})" class="btn btn-danger btn-sm">Delete</button>
+                                                                        <button id="info" onclick="ShowEmperorInfoModal(${
+                            emperor.EmperorId})" class="btn btn-info btn-sm">Info</button>
+                                                                        <button id="edit" onclick="ShowEmperorEditModal(${
+                            emperor.EmperorId})" class="btn btn-primary btn-sm">Edit</button>
+                                                                        <button id="delete" onclick="ShowEmperorDeleteModal(${
+                            emperor.EmperorId})" class="btn btn-danger btn-sm">Delete</button>
                                                                     </td>
                                                              </tr>
                                                             `);
@@ -873,20 +876,20 @@
                 $("#ArmadaModal").modal("hide");
             });
 
-            $("#empForm").submit((e) => e.preventDefault());
+            $("#empCreateForm").submit((e) => e.preventDefault());
 
             CreateEmperor();
 
-            $("#empForm").submit(() => $("#ArmadaModal").modal("hide"));
+            $("#empCreateForm").submit(() => $("#ArmadaModal").modal("hide"));
 
-            $("#empForm").submit(() => CreateEmperorFullTable());
+            $("#empCreateForm").submit(() => CreateEmperorFullTable());
 
         }
 
         function EmperorCreateModalBody() {
             $("#modalBody").html(`
                                     <div class="col-md-8 mx-auto text-center">
-                                         <form id="empForm">
+                                         <form id="empCreateForm">
                                            <fieldset>
                                                <legend>Register Emperor</legend>
 
@@ -907,6 +910,12 @@
                                                    </select>
                                                </div>
                                                <div class="form-group">
+                                                   <label for="SpeciesSelect" class="form-label mt-4">Species</label>
+                                                   <select class="form-select" id="SpeciesSelect">
+                                                    
+                                                   </select>
+                                               </div>
+                                               <div class="form-group">
                                                    <label for="About" class="form-label mt-4">About</label>
                                                    <textarea class="form-control" id="About" rows="3" required minlength="10"></textarea>
                                                </div>
@@ -914,7 +923,7 @@
                                                    <label for="formFile" class="form-label mt-4">Photo</label>
                                                    <input class="form-control" type="file" id="formFile">
                                                </div>
-                                                  <input type="submit" class="btn btn-primary mt-3  value="Register"/>
+                                                  <input type="submit" class="btn btn-primary mt-3"  value="Register"/>
                                               </fieldset>
                                          </form>
                                       </div>
@@ -929,8 +938,8 @@
                 dataType: "json",
                 success: function(response) {
 
-                    var emperorsWithoutEmpire = response.filter(e => e.Emperor == null);
-                    emperorsWithoutEmpire.forEach(function(empire) {
+                    var empireWithoutEmperors = response.filter(e => e.Emperor == null);
+                    empireWithoutEmperors.forEach(function(empire) {
                         $("#EmpireSelect").append(`
                                                        <option id="${empire.EmpireId}">${empire.Name}</option>
                                                `);
@@ -942,7 +951,7 @@
 
         function CreateEmperor() {
 
-            $("#empForm").submit(() => {
+            $("#empCreateForm").submit(() => {
                 var emperor = {
                     "EmperorId": $("#EmpireSelect").children(":selected").attr("id"),
                     "Name": $("#Name").val(),
@@ -972,8 +981,6 @@
 
         //Edit Emperor Section
 
-       
-
         function ShowEmperorEditModal(id) {
             $(document).ready(function() {
                 $("#ArmadaModal").modal();
@@ -983,15 +990,16 @@
 
             EmperorEditModalBody(id);
 
-            $("#modalFooter").html('<button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Cancel</button>');
+            $("#modalFooter")
+                .html('<button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Cancel</button>');
 
             $(".close").click(function() {
                 $("#ArmadaModal").modal("hide");
             });
 
-            $("#empEditForm").submit((e) => e.preventDefault());
+            $("#empForm").submit((e) => e.preventDefault());
 
-            //EditEmperor();
+            EditEmperor(id);
 
             $("#empForm").submit(() => $("#ArmadaModal").modal("hide"));
 
@@ -999,60 +1007,38 @@
 
         }
 
-        function EmperorEditModalBody(id) {
+        
+
+        function EditEmperor(id) {
+
+            $("#empForm").submit(() => {
+                var emperor = {
+                    "EmperorId": $("#EmpireSelect").children(":selected").attr("id"),
+                    "Name": $("#Name").val(),
+                    "Age": $("#Age").val(),
+                    "Description": $("#About").val(),
+                    "Photo": null,
+
+                };
+           
             $.ajax({
-                type: "GET",
+                type: "PUT",
                 url: `/api/Emperor/?id=${id}`,
-                data: "",
+                data: emperor,
                 dataType: "json",
-                success: function (response) {
-                    $("#modalBody").html(`
-                                    <div class="col-md-8 mx-auto text-center">
-                                         <form id="empEditForm">
-                                           <fieldset>
-                                               <legend>Edit Emperor</legend>
-
-                                               <div class="form-group">
-                                                   <label class="col-form-label mt-4" for="Name">Name</label>
-                                                   <input type="text" class="form-control" placeholder="Name" id="Name" value=${response.Name} autocomplete="off" required minlength="2" >
-                                               </div>
-
-                                               <div class="form-group">
-                                                   <label class="col-form-label mt-4" for="Age">Age</label>
-                                                   <input type="number" class="form-control" placeholder="Age" id="Age" value=${response.Age} autocomplete="off" required min ="18">
-                                               </div>
-
-                                               <div class="form-group">
-                                                   <label for="SpeciesSelect" class="form-label mt-4">Species</label>
-                                                   <select class="form-select" id="SpeciesSelect">
-                                                    <option id=${response.Species}>${response.Species}</option>
-                                                   </select>
-                                               </div>
-
-                                               <div class="form-group">
-                                                   <label for="EmpireSelect" class="form-label mt-4">Empire</label>
-                                                   <select class="form-select" id="EmpireSelect">
-                                                    <option id=${response.EmpireId}>${response.EmpireName}</option>
-                                                   </select>
-                                               </div>
-                                               <div class="form-group">
-                                                   <label for="About" class="form-label mt-4">About</label>
-                                                   <textarea class="form-control" id="About" rows="3"  required minlength="10">${response.Description}</textarea>
-                                               </div>
-                                               <div class="form-group">
-                                                   <label for="formFile" class="form-label mt-4">Photo</label>
-                                                   <input class="form-control" type="file" id="formFile">
-                                               </div>
-                                                  <input type="submit" class="btn btn-primary mt-3  value="Register"/>
-                                              </fieldset>
-                                         </form>
-                                      </div>
-                                  `);
+                success: function(response) {
+                    $("#successAlert").html(`
+                                       <div class="alert alert-dismissible alert-success">
+                                           <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                                           <strong>Well done!</strong> You successfully Edited  ${response.Name} !!
+                                       </div>
+                                              `);
+                    setTimeout(() => $("#successAlert").html('').fadeOut(4000), 4000);
                 }
             });
-
-
+            });
         }
+
 
         //Info Emperor Section
         function ShowEmperorInfoModal(id) {
