Empire Create Started

--- a/Armada.WebApp/Views/Admin/Index.cshtml
+++ b/Armada.WebApp/Views/Admin/Index.cshtml
@@ -71,7 +71,7 @@
 
 @section scripts
 {
-
+    <script src="~/Scripts/bootstrap-select.min.js"></script>
     <script src="~/Scripts/MyJavaScript/Admiral.js"></script>
     <script src="~/Scripts/MyJavaScript/Crew.js"></script>
     <script src="~/Scripts/MyJavaScript/Emperor.js"></script>
